# Binary-search-trees-assignment

./: .gitignore  CMakeLists.txt  README.md  Sazanov_lab2.ipynb
graphs/: Graphs.cpp  Graphs.h  Timer.h  insert.csv  remove.csv  search.csv
src/: main.cpp
src/trees/: AVLTree.cpp  AVLTree.h  AbstractTree.cpp  AbstractTree.h  SimpleTree.cpp  SimpleTree.h  SplayTree.cpp  SplayTree.h  Treap.cpp  Treap.h
src/util/: RandomGenerator.cpp  RandomGenerator.h
test/: Tests.cpp  Tests.h
